--- a/fancontrol.service
+++ b/fancontrol.service
@@ -4,7 +4,7 @@ Description=Raspberry Pi Fan control
 [Service]
 TimeoutStartSec=0
 Restart=always
-ExecStart=/home/pi/pi-fan-controller/fancontrol.py
+ExecStart=/usr/local/bin/fancontrol
 
 [Install]
 WantedBy=multi-user.target
